[tool.poetry]
name = "nonebot-plugin-dog"
version = "0.3.01"
description = "随机返回一句舔狗日记...嘤嘤嘤"
license = "MIT"
authors = ["Reversedeer"]
readme = "README.md"
homepage = "https://github.com/Reversedeer/nonebot_plugin_dog"
repository = "https://github.com/Reversedeer/nonebot_plugin_dog"


[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = ">=2.0.0rc2"
httpx = "^0.23.1"
poetry = "^1.5.0"
nonebot-adapter-onebot = ">=2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"